# JobHunterAI

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
