[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "JobHunterAI is a tool that automates job searching on LinkedIn using web scraping and automation. Built with Django, it lets users find, filter, and save job listings easily. With scheduled scraping using Celery, the platform ensures listings stay updated, providing users with the latest job opportunities in real-time."
authors = [
  { name = "tuandat" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true
